--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-map-interaction": "^2.1.0",
     "react-player": "^2.16.0",
     "react-zoom-pan-pinch": "^3.6.1"
   },
