--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mui/material": "^5.15.21",
     "aws-sdk": "^2.1652.0",
     "axios": "^1.7.2",
+    "konva": "^9.3.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-konva": "^18.2.10",
     "react-map-interaction": "^2.1.0",
     "react-player": "^2.16.0",
-    "react-zoom-pan-pinch": "^3.6.1"
+    "react-zoom-pan-pinch": "^3.6.1",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
