--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.4",
     "aws-sdk": "^2.1652.0",
     "axios": "^1.7.2",
+    "firebase": "^10.13.0",
     "konva": "^9.3.13",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-konva": "^18.2.10",
     "react-map-interaction": "^2.1.0",
     "react-player": "^2.16.0",
+    "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.6.1",
-    "use-image": "^1.1.1"
+    "use-image": "^1.1.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
