added maplist data to a tree view

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
+        "antd",
+        "toastify",
+        "Toastify",
         "uuidv",
         "webm",
         "webp"
