--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/joy": "^5.0.0-beta.48",
-    "@mui/material": "^5.16.4",
+    "@mui/material": "^5.16.7",
+    "@mui/x-tree-view": "^7.14.0",
+    "antd": "^5.20.3",
     "aws-sdk": "^2.1652.0",
     "axios": "^1.7.2",
     "firebase": "^10.13.0",
