--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-player": "^2.16.0",
     "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.6.1",
+    "socket.io-client": "^4.7.5",
     "use-image": "^1.1.1",
     "uuid": "^10.0.0"
   },
